# cloud-treatment-ecto

./: .gitmodules  CMakeLists.txt  README.md  cloud-treatment.pro
src/: CMakeLists.txt  dirs.hh.in
src/cpp/: _blue_print_ecto_pcl_cell.cpp  cloud_treatment.cpp  cloudviewercell.cpp  editheadercell.cpp  extractheadercell.cpp  normalestimationcell.cpp  normalsegmentationcell.cpp  organizedeuclidiansegmentationcell.cpp  organizedmultiplanesegmentationcell.cpp  passthrough3dcell.cpp  passthroughcell.cpp  pcdreadercell.cpp  principalcomponentextractioncell.cpp  recalibratemsgcell.cpp  rectanglespubcell.cpp  regiongrowingcell.cpp  stepcenteringcell.cpp  stepsegmentationcell.cpp  typedefs.h  voxelgridcell.cpp  xyzswitchcell.cpp
src/python/: ladder_segmentation.py  ladder_segmentation_pub.py  launcher_kinect.sh  region_growing.py  ros_ladder_segmentation.py  scheduler_test.py  test_kinect_opencv.py  test_opennicapture.py  testing_algo.py
